src/test/resources/validation/error/implicitJoinViaExistentThenNonExistentPath/schema.graphqls
type Query {
  student(id: ID!): StudentVedInstitusjon
}

type StudentVedInstitusjon @table(name: "STUDENT") {
  id: ID!
  #there is no path from LAND to EKSAMENSTILPASNING
  emner: [Emne!]! @splitQuery @reference(via: [{table: "PERSON"}, {table: "INSITITUSJON"}, {table: "LAND"}  {table: "EKSAMENSTILPASNING"}])
}

type Eksamenstilpasningssoknad @table(name: "EKSAMENSTILPASNING") {
  id: ID!
}

type Emne @table {
  id: ID!
}

